src/objects/copado__Deployment_Flow_Step__c.object
<CustomObject>
    <fields>
        <fullName>copado__Automatically_Merge_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Merge and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Commits_Ahead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commits Ahead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Commits_Behind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commits Behind</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <label>Deployment Flow</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Branch__c</fullName>
        <description>This is the Git branch linked to the destination environment. This Git branch is defined in another deployment flow step record where the current destination environment is the source environment.</description>
        <inlineHelpText>This is the Git branch linked to the destination environment. This Git branch is defined in another deployment flow step record where the current destination environment is the source environment.</inlineHelpText>
        <label>Destination Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps (Destination Environment)</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Merge_Base__c</fullName>
        <description>Last date and time when the source and target branch were in Sync (no commits ahead or behind).</description>
        <inlineHelpText>Last date and time when the source and target branch were in Sync (no commits ahead or behind).</inlineHelpText>
        <label>Last Merge Base</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Merge_CBM_Sync__c</fullName>
        <description>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the destination environment.</description>
        <inlineHelpText>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the destination environment.</inlineHelpText>
        <label>Last Merge CBM Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Pull_CBM_Sync__c</fullName>
        <description>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the source environment.</description>
        <inlineHelpText>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the source environment.</inlineHelpText>
        <label>Last Pull CBM Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Merge_Auto_Resolved_Files__c</fullName>
        <description>List of conflicted files auto resolved by Copado when merging the source branch into the destination branch.</description>
        <inlineHelpText>List of conflicted files auto resolved by Copado when merging the source branch into the destination branch.</inlineHelpText>
        <label>Merge Auto Resolved Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Pull_Auto_Resolved_Files__c</fullName>
        <description>List of conflicted files auto resolved by Copado when merging the destination branch into the source branch.</description>
        <inlineHelpText>List of conflicted files auto resolved by Copado when merging the destination branch into the source branch.</inlineHelpText>
        <label>Pull Auto Resolved Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sync_Merge_State__c</fullName>
        <label>Sync Merge State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs recalculating</fullName>
                    <default>true</default>
                    <label>Needs recalculating</label>
                </value>
                <value>
                    <fullName>Recalculating</fullName>
                </value>
                <value>
                    <fullName>In sync</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation errors</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Sync_Pull_State__c</fullName>
        <label>Sync Pull State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs recalculating</fullName>
                    <default>true</default>
                    <label>Needs recalculating</label>
                </value>
                <value>
                    <fullName>Recalculating</fullName>
                </value>
                <value>
                    <fullName>In sync</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation errors</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test_Level__c</fullName>
        <inlineHelpText>Test Level must be set to &quot;Run Local Tests&quot;</inlineHelpText>
        <label>Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Test Run</fullName>
                </value>
                <value>
                    <fullName>Run Specified Tests</fullName>
                </value>
                <value>
                    <fullName>Run Local Tests</fullName>
                    <default>true</default>
                    <label>Run Local Tests</label>
                </value>
                <value>
                    <fullName>Run All Tests In Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Flow Step</label>
    <nameField>
        <displayFormat>DFS-{000000}</displayFormat>
        <label>Deployment Flow Step Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Branch_Naming_matches_Sandbox_convention</fullName>
        <active>true</active>
        <description>Branch_Naming_matches_Sandbox_convention =  {ORGPREFIX}-{sandboxname}</description>
        <errorConditionFormula>RIGHT(copado__Source_Environment__r.Name,(LEN(copado__Source_Environment__r.Name) - 
FIND(&apos;-&apos;,copado__Source_Environment__r.Name) )) &lt;&gt; copado__Branch__c</errorConditionFormula>
        <errorMessage>Branch_Naming_matches_Sandbox_convention =  {ORGPREFIX}-{sandboxname}
Org Prefix is 3 letter code OF Source Sandbox!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Branch_cannot_be_blank</fullName>
        <active>true</active>
        <description>Branch_cannot_be_blank if CBM is Active</description>
        <errorConditionFormula>ISBLANK(copado__Branch__c)  &amp;&amp;  copado__Deployment_Flow__r.copado__Active__c</errorConditionFormula>
        <errorMessage>Deployment Step Branch cannot be blank if CBM Flow is Active</errorMessage>
    </validationRules>
</CustomObject>